--- a/Terminal/build.gradle
+++ b/Terminal/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 19
     buildToolsVersion '19.1.0'
     defaultConfig {
-        applicationId 'com.example.electronicqueue.server'
+        applicationId 'com.example.electronicqueue.client'
         minSdkVersion 14
         targetSdkVersion 19
         versionCode 1
